--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         // 全局变量
         let unconvergedPairs = []; // 存储筛选后的未收敛疾病对
         let targetDiseases = [];   // 按目标疾病分组的数据
-        const excelFilePath = "信心值统计结果_hm.xlsx"; // 预先上传的Excel文件路径
+        const excelFilePath = "信心值统计结果_hm1.xlsx"; // 预先上传的Excel文件路径
         
         let userData = {
             expertId: generateAnonymousId(),
